--- a/source/style.css
+++ b/source/style.css
@@ -45,3 +45,7 @@
         order: -1;
         /* Изображение будет расположено перед текстом */
     }
+
+    #button-container.hidden {
+        opacity: 0; /* Скрываем контейнер при добавлении класса hidden */
+    }
