--- a/source/style.css
+++ b/source/style.css
@@ -9,11 +9,18 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        gap: 102px;
         z-index: 999;
-        background: url('../source/pictures/background.jpg') center center no-repeat;
-        background-size: cover;
+        /* background: url('../source/pictures/logo.png') center center no-repeat;
+        background-size: cover; */
         background-color: rgba(255, 255, 255, 0.8);
         padding: 20px;
+    }
+
+    #button-wrapper {
+        width: 77%;
+        display: flex;
+        justify-content: space-between;
     }
 
     #button-container button img {
@@ -28,18 +35,22 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding: 10px;
+        border-radius: 30px;
+        border: none;
+        padding: 43px 110px;
         /* Уменьшенный размер кнопок */
-        width: 50%;
-        max-width: 200px;
+        width: 41%;
+        max-width: 339px;
         /* Ширина кнопок */
-        height: 40px;
+        height: 165px;
         /* Высота кнопок */
     }
 
     #button-container button img {
         max-width: 100%;
+        width: 118px;
         max-height: 100%;
+        height: 79px;
         margin-right: 10px;
         /* Отступ справа от изображения */
         order: -1;
