--- a/source/style.css
+++ b/source/style.css
@@ -4,6 +4,7 @@
         top: 0;
         left: 0;
         width: 100vw;
+        margin: auto;
         height: 100vh;
         display: flex;
         align-items: center;
@@ -19,6 +20,7 @@
 
     #button-wrapper {
         width: 77%;
+        max-width: 828px;
         display: flex;
         justify-content: space-between;
     }
