--- a/source/style.css
+++ b/source/style.css
@@ -14,7 +14,7 @@
         z-index: 999;
         /* background: url('../source/pictures/logo.png') center center no-repeat;
         background-size: cover; */
-        background-color: rgba(255, 255, 255, 0.8);
+        background-color: #FFFFFF;
         padding: 20px;
     }
 
@@ -39,6 +39,7 @@
         justify-content: center;
         border-radius: 30px;
         border: none;
+        background-color: #D9D9D9;
         padding: 43px 110px;
         /* Уменьшенный размер кнопок */
         width: 41%;
