--- a/source/style.css
+++ b/source/style.css
@@ -4,13 +4,12 @@
         top: 0;
         left: 0;
         width: 100vw;
-        margin: auto;
         height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        gap: 102px;
+        gap: 30px;
         z-index: 999;
         /* background: url('../source/pictures/logo.png') center center no-repeat;
         background-size: cover; */
@@ -19,10 +18,12 @@
     }
 
     #button-wrapper {
-        width: 77%;
-        max-width: 828px;
+        width: 90%;
+        max-width: 320px;
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
+        gap: 20px; 
     }
 
     #button-container button img {
@@ -40,20 +41,16 @@
         border-radius: 30px;
         border: none;
         background-color: #D9D9D9;
-        padding: 43px 110px;
-        /* Уменьшенный размер кнопок */
-        width: 41%;
-        max-width: 339px;
-        /* Ширина кнопок */
-        height: 165px;
-        /* Высота кнопок */
+        padding: 20px 30px;
+        width: 45%; 
+        max-width: 140px; 
+        height: 100px;
     }
 
     #button-container button img {
         max-width: 100%;
-        width: 118px;
         max-height: 100%;
-        height: 79px;
+        height: auto;
         margin-right: 10px;
         /* Отступ справа от изображения */
         order: -1;
@@ -62,4 +59,10 @@
 
     #button-container.hidden {
         opacity: 0; /* Скрываем контейнер при добавлении класса hidden */
+    }
+
+    #logo {
+        object-fit: cover;
+        width: 90%;
+        margin-bottom: 100px;
     }
