--- a/source/style.css
+++ b/source/style.css
@@ -66,5 +66,5 @@
         max-width: 240px;
         object-fit: cover;
         width: 90%;
-        margin: 40px auto;
+        margin: 10px auto 25px;
     }
