--- a/source/style.css
+++ b/source/style.css
@@ -7,7 +7,6 @@
         height: 100vh;
         display: flex;
         align-items: center;
-        justify-content: center;
         flex-direction: column;
         gap: 30px;
         z-index: 999;
@@ -25,6 +24,7 @@
         justify-content: space-between;
         gap: 20px; 
         margin: 0 auto;
+        padding-right: 20px;
     }
 
     #button-container button img {
@@ -67,4 +67,5 @@
         object-fit: cover;
         width: 90%;
         margin: 10px auto 25px;
+        padding-right: 20px;
     }
